# Challenge

./: .gitignore  CHALLENGE.PY  Makefile  README.md  analysis.ipynb  analysys.ipynb  challenge.ipynb  pyproject.toml
input_files/: change_events.csv  incident_events.csv
output_files/: results.csv
src/: __init__.py  run.py
src/utils/: __init__.py  _build_query.py  _file_handling.py
